# TS1170.5-SDP

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  publish-docs.yml  release.yml  run-tests.yml
deliverables/v2/: TS1170-5_GridPoints_2025.geojson  TS1170-5_MajorFaults_2025.geojson  TS1170-5_Table3-1_2025.csv
docs/: index.md  installation.md  process.md  usage.md  versions.md
docs/api/: build.md  config.md  convert.md  data_creation.md  deliverables.md  index.md  mean_magnitudes.md  publish.md  versioning.md
docs/end_user_functions/: constants.md  create_spectra.md  end_user_functions.md  end_user_tools.md  geospatial_analysis.md  index.md  query_parameters.md
docs/scripts/: pipeline_cli.md  publish_cli.md  version_cli.md
docs/snz_documentation/: csv_table_csv.csv  snz_documentation.md
docs/user_orientation/: index.md  snz_landing_page.md
end_user_functions/: constants.py  create_spectra.py  geospatial_analysis.py  query_parameters.py
nzssdt_2023/: __init__.py  build.py  cli.py  config.py  convert.py  report.py  versioning.py
nzssdt_2023/convert/: __init__.py  dist_mag_table.py  sat_table.py
nzssdt_2023/data_creation/: NSHM_to_hdf5.py  __init__.py  calculate_D_values.py  constants.py  dm_parameter_generation.py  extract_data.py  extract_hdf5.py  gis_data.py  lower_bound.py  mean_magnitudes.py  parameter_generation.py  query_NSHM.py  sa_parameter_generation.py  util.py
nzssdt_2023/end_user_functions/: __init__.py  constants.py  create_spectra.py  geospatial_analysis.py  query_parameters.py
nzssdt_2023/mean_magnitudes/: __init__.py  mean_magnitudes.py
nzssdt_2023/publish/: __init__.py  convert.py  report.py  report_condensed.py  report_condensed_v2.py  report_named_v2.py  report_v2.py
nzssdt_2023/scripts/: SaT-variables_mini.pkl  __init__.py  compare_files.py  create_mini_hdf5.py  create_parameter_tables.py  create_parameter_tables_combo.py  create_parameter_tables_from_NSHM.py  create_sa_parameter_tables_from_hdf5.py  create_sa_pkl.py  mini_D-M-tables.csv  pipeline_cli.py  pipeline_steps.py  publish_cli.py  recreated_SaT-variables.pkl  version_cli.py
nzssdt_2023/snz_deliverables/: create_deliverables.py
nzssdt_2023/versioning/: __init__.py  dataclass.py  versioning.py
reports/v2/: gridded_location_report.csv  named_location_report.csv
resources/: version_list.json
resources/v1/: d_and_m.json  location_replacements.json  named_locations.json
resources/v2/: major_faults.geojson
resources/v_cbc/: d_and_m.json  grid_locations.json  named_locations.json
resources/v_test/: d_and_m.json  grid_locations.json
scripts/: run_mini_data_creation.py
srwg_sat/: main.py
tests/: conftest.py  test_build.py  test_convert_dist_mag_table.py  test_convert_merge.py  test_convert_sat_table.py  test_json_artefacts.py  test_mean_magnitudes.py  test_report_named.py  test_versioning.py
tests/convert/: test_convert_dist_mag_table.py  test_convert_merge.py  test_convert_sat_table.py
tests/data_creation/: conftest.py  test_dm_parameter_generation.py  test_gis_data.py  test_mean_magnitudes.py  test_sa_gen_create_tables.py  test_sa_gen_fit_td.py  test_sa_gen_pga.py  test_sa_gen_pga_diagnostics.py  test_sa_gen_pga_vs_fixture.py  test_sa_gen_sas_tc_td_vs_fixture.py  test_sa_gen_uhs_value.py  test_sa_parameter_generation.py
tests/end_user_functions/: conftest.py  test_create_spectra.py  test_retrieve_parameters.py
tests/fixtures/: SRWG214_mean_mag.csv  (+4 more)
(+47 files in other folders)
