[tool.poetry]
name = "nzssdt-2023"
version = "0.1.0"
description = "Data resource library for the NZ Seismic Site Demand Table 2023"
authors = ["NZ NSHM team <nshm@gns.cri.nz>"]
license = "AGPL3"
readme = "README.md"
packages = [{include = "nzssdt_2023"}]

[tool.poetry.scripts]
cli = 'nzssdt_2023.cli:cli'

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.0.2"
nzshm-model = "^0.3.0"
nzshm-common = "^0.6.0"
click = "^8.1.3"
dacite = "^1.8.1"

[tool.poetry.group.dev.dependencies]
black  = { version = "^22.3"}
bump2version = {version = "^1.0.1"}
flake8  = { version = "^3.9.2"}
flake8-docstrings = { version = "^1.6.0", optional = true }
isort  = { version = "^5.8.0"}
mypy = {version = "^1.2"}
pre-commit = {version = "^2.12.0", optional = true}
pytest = ">7.0"
pytest-cov  = { version = "^2.12.0"}
tox = "^4.5.2"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
