[tool.poetry]
name = "nzssdt-2023"
version = "0.5.0"
description = "Data resource library for the NZ Seismic Site Demand Table 2023"
authors = ["NZ NSHM team <nshm@gns.cri.nz>"]
license = "AGPL3"
readme = "README.md"
packages = [{include = "nzssdt_2023"}]

[tool.poetry.scripts]
publish = 'nzssdt_2023.scripts.publish_cli:cli'

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.2"
click = "^8.1.3"
dacite = "^1.8.1"
borb = "^2.1.13"
toshi-hazard-store = "^0.7.9"
h5py = "^3.11.0"
geopandas = "^1.0.1"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
black  = { version = "^22.3"}
bump2version = {version = "^1.0.1"}
flake8  = { version = "^3.9.2"}
flake8-docstrings = { version = "^1.6.0", optional = true }
isort  = { version = "^5.8.0"}
mypy = {version = "^1.2"}
pre-commit = {version = "^2.12.0", optional = true}
pytest = ">7.0"
pytest-cov  = { version = "^2.12.0"}
tox = "^4.5.2"
nzshm-common = "^0.6.1"
nzshm-model = "^0.10.6"
twine = "^5.1.1"
pytest-lazy-fixtures = "^1.1.1"
pytest-mock = "^3.14.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = {version = "^0.26.0", extras = ["python"]}
mkdocs-autorefs = "^1.0.1"
mkdocs-include-markdown-plugin = "^6.0.6"
mkdocs-material = "^9.5.21"
mkdocs-material-extensions = "^1.3.1"
mkdocs-pymdownx-material-extras = "^2.5.6"
mkdocs-with-pdf = "^0.9.3"
mkdocs-click = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
